--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *~
 .\#*
-emacs/auto-save-list
-emacs/elpa
-emacs/transient
 emacs/.*
+emacs/auto-save-list
+emacs/eln-cache
+emacs/elpa
+emacs/recentf
+emacs/tramp
+emacs/transient
